--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100052607265611%22%3A%22hOCQSHdb%22%7D",
+        "value": "%7B%22100052607265611%22%3A%22aXMCkRbj%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.169Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "vpd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "wd",
@@ -95,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "c_user",
@@ -104,43 +104,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "xs",
-        "value": "41%3AAQJKmKSbbs3fxg%3A2%3A1756657781%3A-1%3A-1",
+        "value": "17%3Aw9-Yur6MWUsYrQ%3A2%3A1756659319%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "fr",
-        "value": "05biJqZfCczVLZGZF.AWcEXFILIAfoK18OIFxNeDBQ-fligEU-JckQxK6Wy6Ttq95Q65s.Bos1jM..AAA.0.0.BotHiA.AWe41cXA1DAWcwXy1yWdHyE1ly4",
+        "value": "05biJqZfCczVLZGZF.AWd-oO90BWdFqr9KWqg8yjt65EGkIGNUrVr_-hPdasbouxbgjgU.Bos1jM..AAA.0.0.BotH55.AWcswu8lHZn0ZQxifGaw5W7V6h0",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2908%3Btimestamp%3A1756657792",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     },
     {
         "key": "fbl_st",
-        "value": "101718461%3BT%3A29277629",
+        "value": "100623666%3BT%3A29277655",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T16:30:18.170Z",
-        "lastAccessed": "2025-08-31T16:30:18.170Z"
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2908%3Btimestamp%3A1756659321",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-31T16:55:39.419Z",
+        "lastAccessed": "2025-08-31T16:55:39.419Z"
     }
         ]
