--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100052607265611%22%3A%22CY32bclp%22%7D",
+        "value": "%7B%22100052607265611%22%3A%22etF7ppTK%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.216Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.033Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "vpd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "wd",
@@ -95,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "c_user",
@@ -104,43 +104,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "xs",
-        "value": "31%3ASHJbQbzkAg85bg%3A2%3A1756659883%3A-1%3A-1",
+        "value": "16%3Ayb_uBjuQX_UZ-A%3A2%3A1756660356%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "fr",
-        "value": "05biJqZfCczVLZGZF.AWd-r4iFB3pvHW34e414q14ZS32rnLbntR8_Xd0RowCvTCpexnM.Bos1jM..AAA.0.0.BotICt.AWcJ1eIUSOhmtAav3Hj__CzzY5I",
+        "value": "05biJqZfCczVLZGZF.AWcebfvcSIGViwismJtSTVv8r7Rf1eX0L90Z8fEvnbffVyvIYDo.Bos1jM..AAA.0.0.BotIKG.AWfSdBoVyV-z3SOdlla4BZNWNsc",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "fbl_st",
-        "value": "101715049%3BT%3A29277664",
+        "value": "100618172%3BT%3A29277672",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2908%3Btimestamp%3A1756659885",
+        "value": "v2%3Bclient_version%3A2908%3Btimestamp%3A1756660358",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T17:04:53.217Z",
-        "lastAccessed": "2025-08-31T17:04:53.217Z"
+        "creation": "2025-08-31T17:12:51.034Z",
+        "lastAccessed": "2025-08-31T17:12:51.034Z"
     }
 ]
