--- a/config.json
+++ b/config.json
@@ -16,8 +16,8 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "🪄VIPER BURHAN🪄",
-    "PREFIX": "/",
+    "BOTNAME": "🪄VIPER CHAT-BOT🪄",
+    "PREFIX": ".",
     "ADMINBOT": [
         "100052607265611"
     ],
